[gd_scene load_steps=7 format=3 uid="uid://ccqhi340y01gb"]

[ext_resource type="Script" uid="uid://b1wh424dt1e3x" path="res://scripts/ui/pause_menu.gd" id="1_7ukfp"]
[ext_resource type="FontFile" uid="uid://nigfj3c785xk" path="res://assets/font/Oxanium-Bold.ttf" id="3_avurv"]
[ext_resource type="FontFile" uid="uid://d7m18pwnninr" path="res://assets/font/Oxanium-Medium.ttf" id="4_avurv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fob5h"]
content_margin_left = 72.0
content_margin_top = 12.0
content_margin_right = 72.0
content_margin_bottom = 12.0
bg_color = Color(0, 0, 0, 0.501961)
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ejwgg"]
content_margin_left = 64.0
content_margin_top = 128.0
content_margin_right = 64.0
content_margin_bottom = 128.0
bg_color = Color(0, 0, 0, 0.282353)
corner_radius_top_left = 48
corner_radius_bottom_right = 48
corner_detail = 1

[sub_resource type="Theme" id="Theme_ejwgg"]
default_font = ExtResource("4_avurv")
Button/font_sizes/font_size = 24
Button/fonts/font = ExtResource("3_avurv")
Button/styles/normal = SubResource("StyleBoxFlat_fob5h")
PanelContainer/styles/panel = SubResource("StyleBoxFlat_ejwgg")
VBoxContainer/constants/separation = 12

[node name="PauseMenu" type="Control"]
process_mode = 3
z_index = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7ukfp")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuButtons" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
theme = SubResource("Theme_ejwgg")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MenuButtons"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/MenuButtons/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Game Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resume_Button" type="Button" parent="CenterContainer/MenuButtons/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 0.498039)
text = "RESUME GAME"

[node name="RestartCheckpoint_Button" type="Button" parent="CenterContainer/MenuButtons/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 0.498039)
text = "RESTART FROM CHECKPOINT"

[node name="Restart_Button" type="Button" parent="CenterContainer/MenuButtons/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 0.498039)
text = "RESTART LEVEL"

[node name="MainMenu_Button" type="Button" parent="CenterContainer/MenuButtons/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 0.498039)
text = "BACK TO MAIN MENU"

[node name="DesktopQuit_Button" type="Button" parent="CenterContainer/MenuButtons/VBoxContainer"]
layout_mode = 2
text = "QUIT TO DESKTOP"

[connection signal="pressed" from="CenterContainer/MenuButtons/VBoxContainer/Resume_Button" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="CenterContainer/MenuButtons/VBoxContainer/RestartCheckpoint_Button" to="." method="_on_restart_checkpoint_btn_pressed"]
[connection signal="pressed" from="CenterContainer/MenuButtons/VBoxContainer/Restart_Button" to="." method="_on_restart_btn_pressed"]
[connection signal="pressed" from="CenterContainer/MenuButtons/VBoxContainer/MainMenu_Button" to="." method="_on_main_menu_btn_pressed"]
[connection signal="pressed" from="CenterContainer/MenuButtons/VBoxContainer/DesktopQuit_Button" to="." method="_on_quit_btn_pressed"]
